<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    
    <string name="app_name">MEDroid</string>
    <string name="lbl_usuario">Usuário</string>
    <string name="lbl_senha">Senha</string>
    <string name="btn_login">Login</string>
    <string name="msg_aguarde">Aguarde</string>
    <string name="msg_aguarde_login">Aguarde autenticando usuário</string>
    <string name="msg_aguarde_insert">Aguarde enviando transação</string>
    <string name="msg_atencao">Atenção</string>
    <string name="lbl_sim">Sim</string>
    <string name="lbl_nao">Não</string>
    <string name="lbl_data">Data</string>
    <string name="lbl_descricao">Descrição</string>
    <string name="lbl_categoria">Categoria</string>
    <string name="lbl_conta">Conta</string>
    <string name="lbl_valor">Valor</string>
    <string name="btn_inserir">Adicionar Transação</string>
    <string name="mnu_inserir">Adicionar Transação</string>
    <string name="mnu_sair">Sair</string>
    <string name="btn_sair">Sair</string>
    
    <string-array name="menuItems">
        <item>@string/mnu_inserir</item>
        <item>@string/mnu_sair</item>
    </string-array>
    
</resources>
