<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="#CCD5CC">
            
    
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_data" android:textColor="#000000"/>
   	<DatePicker android:id="@+id/in_data" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
   	
   	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_descricao" android:textColor="#000000"/>
   	<EditText android:id="@+id/in_descricao" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textAutoComplete" />
   	
   	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_categoria" android:textColor="#000000" />
   	<Spinner android:id="@+id/in_categoria" android:layout_width="fill_parent" android:layout_height="wrap_content" />
   	    
   	
   	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_conta" android:textColor="#000000"/>
   	<Spinner android:id="@+id/in_conta" android:layout_width="fill_parent" android:layout_height="wrap_content" />
   	
   	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_valor" android:textColor="#000000"/>
   	<EditText android:id="@+id/in_valor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="numberDecimal"/>
   	
   	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="right"  >
   		<Button android:id="@+id/botaoInserir" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_inserir" />
   	</LinearLayout>
   
</LinearLayout>
