<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCD5CC"
    android:orientation="vertical" android:gravity="center_vertical">

    	<LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center_horizontal" 
	        android:layout_marginLeft="20dp" 
	        android:layout_marginRight="20dp">
    		<ImageView
	        android:id="@+id/logo"
	        android:layout_width="139dp"
	        android:layout_height="83dp"
	        android:layout_marginBottom="40dp"
	        android:layout_marginRight="20dp"
	        android:src="@drawable/icon" />
    	</LinearLayout>
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lbl_usuario"
	        android:textColor="#000000" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
	
	    <EditText
	        android:id="@+id/in_usuario"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:text="wag182@gmail.com"  android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lbl_senha"
	        android:textColor="#000000" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
	
	    <EditText
	        android:id="@+id/in_senha"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:text="*753951*" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
	
	    <FrameLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">

	         <Button
	            android:id="@+id/botaoSair"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:text="@string/btn_sair"  />
	         
	        <Button
	            android:id="@+id/botaoLogin"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="right"
	            android:text="@string/btn_login" />
	       
	    </FrameLayout>
	    
</LinearLayout>
